fixed font size on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -51,5 +51,10 @@
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+    font-size: 4rem;
+  }
+
+  main#home h2 {
+    font-size: 1.25rem;
   }
 }
